--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,15 +29,17 @@
 		app:layout_constraintTop_toBottomOf="@+id/fragment"/>
 	
 	<include
+		android:id="@+id/include2"
 		layout="@layout/agenda_event_summary"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:layout_marginBottom="32dp"
-		app:layout_constraintBottom_toBottomOf="parent"
+		android:layout_marginTop="16dp"
 		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"/>
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/include"/>
 	
 	<include
+		android:id="@+id/include"
 		layout="@layout/fragment_completion_bar"
 		android:layout_width="8dp"
 		android:layout_height="1dp"
@@ -47,4 +49,17 @@
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@+id/fragment2"/>
+	
+	<androidx.recyclerview.widget.RecyclerView
+		android:id="@+id/recyclerview"
+		android:layout_width="0dp"
+		android:layout_height="0dp"
+		android:layout_marginStart="16dp"
+		android:layout_marginTop="16dp"
+		android:layout_marginEnd="16dp"
+		android:layout_marginBottom="16dp"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/include2"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
