Created completion bar view
Signed-off-by: RanfordS <ranfordsaisamy@live.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,17 @@
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@+id/fragment2"/>
 	
+	<uk.co.rskyl.arcanaplanner.completionbar.ViewCompletionBar
+		android:id="@+id/ViewCompletionBar"
+		android:layout_width="0dp"
+		android:layout_height="3dp"
+		android:layout_marginStart="16dp"
+		android:layout_marginEnd="16dp"
+		android:layout_marginBottom="16dp"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"/>
+	
 	<androidx.recyclerview.widget.RecyclerView
 		android:id="@+id/recyclerview"
 		android:layout_width="0dp"
@@ -58,8 +69,19 @@
 		android:layout_marginTop="16dp"
 		android:layout_marginEnd="16dp"
 		android:layout_marginBottom="16dp"
-		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintBottom_toTopOf="@+id/button"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@+id/include2"/>
+	
+	<Button
+		android:id="@+id/button"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="16dp"
+		android:text="@string/hello_world"
+		android:textAllCaps="false"
+		app:layout_constraintBottom_toTopOf="@+id/ViewCompletionBar"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
