Added shadow to event circle, TODO: add for completion bar
Signed-off-by: RanfordS <ranfordsaisamy@live.com>

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,3 +8,8 @@
 	<color name="colorAgendaEventCircleBaseMajor">#FFFFFF</color>
 	<color name="colorAgendaEventCircleBaseMinor">#E1E1E1</color>
 </resources>
+<!--https://material.io/design/color/the-color-system.html#tools-for-picking-colors
+Colors of interest
+#A39546
+#4E937A
+-->
