--- a/app/src/main/res/layout/agenda_event_summary.xml
+++ b/app/src/main/res/layout/agenda_event_summary.xml
@@ -14,6 +14,7 @@
 		android:layout_marginStart="8dp"
 		android:layout_marginTop="8dp"
 		android:layout_marginBottom="8dp"
+		android:elevation="4dp"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintDimensionRatio="1"
 		app:layout_constraintStart_toStartOf="parent"
@@ -68,6 +69,7 @@
 		android:layout_marginStart="8dp"
 		android:layout_marginTop="8dp"
 		android:layout_marginBottom="1dp"
+		android:elevation="4dp"
 		android:fontFamily="sans-serif"
 		android:text="@string/hello_world"
 		android:textColor="@color/colorNearBlack"
