--- a/app/src/main/res/layout/agenda_event_summary.xml
+++ b/app/src/main/res/layout/agenda_event_summary.xml
@@ -27,6 +27,7 @@
 		android:layout_height="3dp"
 		android:layout_marginStart="4dp"
 		android:layout_marginEnd="4dp"
+		android:translationZ="4dp"
 		app:layout_constraintBottom_toBottomOf="@+id/agenda_event_summary_startTime"
 		app:layout_constraintEnd_toStartOf="@+id/agenda_event_summary_endTime"
 		app:layout_constraintHorizontal_bias="0.0"
@@ -69,7 +70,6 @@
 		android:layout_marginStart="8dp"
 		android:layout_marginTop="8dp"
 		android:layout_marginBottom="1dp"
-		android:elevation="4dp"
 		android:fontFamily="sans-serif"
 		android:text="@string/hello_world"
 		android:textColor="@color/colorNearBlack"
